Reconfiguration with Transaction class and structured keyboard with cick design

--- a/00 Cajero - Proyecto/style.css
+++ b/00 Cajero - Proyecto/style.css
@@ -81,6 +81,11 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
+    gap: 1em;
+}
+input{
+    font-size: x-large;
+    text-align: center;
 }
 
 #cash {
